--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pgq-node (3.4-1) unstable; urgency=low
+
+  * v3.4
+
+ -- Marko Kreen <markokr@gmail.com>  Thu, 09 Jul 2020 18:37:02 +0300
+
 pgq-node (3.3.1-1) unstable; urgency=low
 
   * v3.3.1
