--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pgq-node (3.5-1) unstable; urgency=low
+
+  * v3.5
+
+ -- Marko Kreen <markokr@gmail.com>  Tue, 30 Nov 2021 10:48:11 +0200
+
 pgq-node (3.4-1) unstable; urgency=low
 
   * v3.4
